Adjusted a white space issue

--- a/css/368.css
+++ b/css/368.css
@@ -216,6 +216,7 @@ button:hover{
 	width: 50%;
 	float: left;
 	text-align: center;
+	padding: 8% 0%;
 }
 .form{
 	float: left;
